Prevent blog images from being cropped

--- a/templates/style.css
+++ b/templates/style.css
@@ -1737,7 +1737,8 @@ mark,
 }
 .post-content .media-container>img {
     max-width: 100%;
-    width: 100%;
+    height: 100%;
+    width: unset !important;
     display: block;
     margin: 0;
 }
